# rinha-de-backend-2024-01

./: .env  Dockerfile  docker-compose.yml  pyproject.toml
